--- a/src/components/WeatherCard.css
+++ b/src/components/WeatherCard.css
@@ -1,10 +1,17 @@
 .WeatherCard {
-    margin: 15% 5px;
+    margin: 5px;
     display: inline-block;
     border: 1px solid gray;
     border-radius: 10px;
     width: 88px;
-    text-align: center;
+}
+
+.WeatherCard:first-child {
+    background-color: whitesmoke;
+}
+
+.WeatherCard:hover {
+    background-color: #e0ffff;
 }
 
 img {
