--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -1,3 +1,6 @@
+@import "App";
+@import "WeatherCard";
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
